# reddit-notifier

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  RELEASING.md  docker-compose.yml
.cargo/: audit.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  renovate.json
.github/workflows/: _docker-build-push.yml  ci.yml  docker-publish.yml  release.yml  security.yml  zizmor.yml
docs/: TESTING_GUIDE.md  TUI_ARCHITECTURE.md  WIDGET_LIBRARY.md
migrations/: 20250815090000_initial.down.sql  20250815090000_initial.up.sql  20251130145500_add_endpoint_note.down.sql  20251130145500_add_endpoint_note.up.sql
src/: database.rs  db_connection.rs  lib.rs  main.rs  models.rs  poller.rs  rate_limiter.rs  reddit_client.rs  shutdown.rs
src/models/: config.rs  database.rs  mod.rs  notifiers.rs  reddit_api.rs
src/notifiers/: discord.rs  mod.rs  pushover.rs
src/services/: database.rs  mock_database.rs  mod.rs  sqlite_database.rs
src/tui/: app.rs  mod.rs  screen_trait.rs  state_machine.rs  tests.rs  ui.rs
src/tui/screens/: endpoints.rs  logs.rs  main_menu.rs  mod.rs  subscriptions.rs  test_notification.rs
src/tui/state/: messages.rs  mod.rs  navigation.rs
src/tui/validation/: async_validator.rs  mod.rs  webhook_validator.rs
src/tui/widgets/: checkbox_list.rs  common.rs  config_builder.rs  dropdown.rs  form_field.rs  mod.rs  modal_dialog.rs  paginated_view.rs  selectable_table.rs  text_input.rs
