[package]
name = "reddit-notifier"
version = "0.1.0"
edition = "2021"
description = "Poll Reddit subreddits and send notifications via Discord webhooks or Pushover."
license = "MIT"

[dependencies]
anyhow = "1"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "time"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
html-escape = "0.2.13"
chrono = { version = "0.4.42", features = ["serde"] }
serde_with = { version = "3.15.0", features = ["chrono_0_4"] }
