[package]
name = "reddit-notifier"
version = "0.1.0"
edition = "2021"
description = "Poll Reddit subreddits and send notifications via Discord webhooks or Pushover."
license = "MIT"

[lib]
name = "reddit_notifier"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "time"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
html-escape = "0.2.13"
chrono = { version = "0.4.42", features = ["serde"] }
serde_with = { version = "3.15.0", features = ["chrono_0_4"] }
ratatui = "0.28"
crossterm = "0.28"

[[bin]]
name = "reddit-notifier"
path = "src/bin/reddit-notifier.rs"

[[bin]]
name = "reddit-notifier-tui"
path = "src/bin/reddit-notifier-tui.rs"

[[bin]]
name = "healthcheck"
path = "src/bin/healthcheck.rs"


[package.metadata.release]
# Don't publish to crates.io (since this is primarily a Docker application)
publish = false
# Sign the commit (using SSH signing key)
sign-commit = true
# Sign the git tag (using SSH signing key)
sign-tag = true
# Don't run `cargo package` since we're not publishing to crates.io
verify = false
# Automatically push the git tag
push-options = ["--follow-tags"]
# Pre-release replacements - update version references in files
pre-release-replacements = [
  {file="README.md", search="reddit-notifier:latest", replace="reddit-notifier:{{version}}", exactly=1},
  {file="README.md", search="reddit-notifier:{{version}}", replace="reddit-notifier:{{version}}", exactly=2, prerelease=true},
]
